# fcpp

./: .gitignore  CMakeLists.txt  README.md  fcpp-config.cmake
include/fcpp/http/: HttpClient.hpp  HttpResponse.hpp
include/fcpp/sockets/: SocketClient.hpp
include/fcpp/util/: Util.hpp
src/fcpp/http/: HttpResponse.cpp
src/fcpp/sockets/: SocketClient.cpp
src/fcpp/util/: Util.cpp
src/http/: HttpClient.cpp
src/util/: Util.cpp
test/fcpp/sockets/: twitch_irc.cpp
